compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__imports__unqualified_using_private_function.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 187
expression: "import one.{two}\n\npub fn main() {\n  two\n}"
---
----- SOURCE CODE
-- one.rakun
fn two() { 2 }

-- main.rakun
import one.{two}

pub fn main() {
  two
}

----- ERROR
error: Unknown module value
  ┌─ /src/one/two.rakun:1:13
  │
1 │ import one.{two}
  │             ^^^

The module `one` does not have a `two` value.

error: Unknown variable
  ┌─ /src/one/two.rakun:4:3
  │
4 │   two
  │   ^^^

The name `two` is not in scope here.
